--- a/src/PacoteJava/JFUsuario.form
+++ b/src/PacoteJava/JFUsuario.form
@@ -138,7 +138,7 @@
                           <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="lblUsername" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -483,10 +483,13 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="cbAcesso">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Comic Sans MS" size="12" style="0"/>
+            </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="2">
                 <StringItem index="0" value="Admin"/>
-                <StringItem index="1" value="Comum"/>
+                <StringItem index="1" value="Usu&#xe1;rio"/>
               </StringArray>
             </Property>
           </Properties>
@@ -533,7 +536,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Usu&#xe1;rio:"/>
+            <Property name="text" type="java.lang.String" value="Usu&#xe1;rio conectado:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblUsername">
